# cuFHE

cufhe/: CMakeLists.txt
cufhe/include/: cufhe.h
cufhe/lib/: cufhe.cc  cufhe_io.cc
cufhe/test/: test_api_cpu.cc  test_api_gpu.cu
